erDiagram
    USUARIOS {
        int id PK
        varchar email UK
        varchar password_hash
        varchar nombre
        varchar apellido
        varchar rut
        varchar telefono
        varchar nombre_empresa
        boolean activo
        boolean en_trial
        timestamp fecha_inicio_trial
        timestamp fecha_fin_trial
        varchar rol
        int plan_id FK
        timestamp fecha_creacion
        timestamp fecha_actualizacion
    }

    PLANES {
        int id PK
        varchar nombre UK
        text descripcion
        numeric precio_mensual
        numeric precio_anual
        int limite_bodegas
        int limite_usuarios
        int limite_productos
        jsonb caracteristicas
        boolean activo
        int orden
        timestamp fecha_creacion
    }

    SUSCRIPCIONES {
        int id PK
        int usuario_id FK
        int plan_id FK
        date fecha_inicio
        date fecha_fin
        varchar estado
        varchar periodo
        timestamp fecha_creacion
        timestamp fecha_actualizacion
    }

    PAGOS {
        int id PK
        int suscripcion_id FK
        numeric monto
        varchar moneda
        varchar metodo_pago
        varchar estado
        varchar referencia_externa
        timestamp fecha_pago
        timestamp fecha_creacion
    }

    FACTURAS {
        int id PK
        int suscripcion_id FK
        int pago_id FK
        varchar numero_factura UK
        int usuario_id FK
        int plan_id FK
        numeric precio_uf
        numeric precio_clp
        numeric iva
        varchar estado
        timestamp fecha_compra
        timestamp fecha_creacion
        timestamp fecha_actualizacion
    }

    CARRITOS {
        int id PK
        int usuario_id FK
        int plan_id FK
        varchar periodo
        timestamp fecha_creacion
        timestamp fecha_actualizacion
    }

    USUARIOS ||--o{ SUSCRIPCIONES : "se suscribe"
    PLANES ||--o{ SUSCRIPCIONES : "plan contratado"
    SUSCRIPCIONES ||--o{ PAGOS : "genera pagos"
    SUSCRIPCIONES ||--o{ FACTURAS : "facturada"
    PAGOS ||--o| FACTURAS : "respaldada por"
    USUARIOS ||--o| CARRITOS : "tiene carrito"
    PLANES ||--o{ CARRITOS : "plan en carrito"
